update format image

--- a/public/index.example.html
+++ b/public/index.example.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow p-3 mb-5 bg-white rounded">
       <div class="container">
-          <a class="navbar-brand" href="#"><img src="assets/Rectangle.svg" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="./images/Rectangle.svg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -57,7 +57,7 @@
               </div>
               <div class="col-md-6 offset-md-0 pt-5 d-flex justify-content-center align-items-center img-mobil">
                   <span></span>
-                  <div class="col-md-12 offset-md-5 pt-5"><img src="assets/mobilbg.png" alt="" class="w-100"></div>
+                  <div class="col-md-12 offset-md-5 pt-5"><img src="./images/mobilbg.png" alt="" class="w-100"></div>
               </div>
           </div>
       </div>
@@ -144,17 +144,17 @@
                   <h6 class="fw-normal"><small>Connect With Us</small></h6>
                   <div class="d-flex mb-3">
                       <ul class="list-unstyled d-flex justify-content-center justify-content-md-start">
-                          <li><a href="https://web.facebook.com" target="_blank" ><img src="assets/icon_facebook.svg" class="me-2" width="32px" alt=""></a></li>
-                          <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="assets/icon_instagram.svg" class="mx-2" width="32px" alt=""></a></li>
-                          <li><a href="https://twitter.com" target="_blank"><img src="assets/icon_twitter.svg" class="mx-2" width="32px" alt=""></a></li>
-                          <li><a href="https://mail.google.com" target="_blank"><img src="assets/icon_mail.svg" class="mx-2" width="32px" alt=""></a></li>
-                          <li><a href="https://www.twitch.tv" target="_blank"><img src="assets/icon_twitch.svg" class="mx-2" width="32px" alt=""></a></li>
+                          <li><a href="https://web.facebook.com" target="_blank" ><img src="./images/icon_facebook.svg" class="me-2" width="32px" alt=""></a></li>
+                          <li><a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="./images/icon_instagram.svg" class="mx-2" width="32px" alt=""></a></li>
+                          <li><a href="https://twitter.com" target="_blank"><img src="./images/icon_twitter.svg" class="mx-2" width="32px" alt=""></a></li>
+                          <li><a href="https://mail.google.com" target="_blank"><img src="./images/icon_mail.svg" class="mx-2" width="32px" alt=""></a></li>
+                          <li><a href="https://www.twitch.tv" target="_blank"><img src="./images/icon_twitch.svg" class="mx-2" width="32px" alt=""></a></li>
                       </ul>
                   </div>
               </div>
               <div class="col">
                   <h6 class="fw-normal"><small>Copyright Binar 2022</small></h6>
-                  <img src="assets/Rectangle.svg" width="100px" alt="">
+                  <img src="./images/Rectangle.svg" width="100px" alt="">
               </div>
           </div>
       </div>
