--- a/public/index.example.html
+++ b/public/index.example.html
@@ -82,13 +82,13 @@
                           <div class="col-md-3">
                               <div class="form-group">
                                   <label for="exampleFormControlSelect1">Tanggal</label>
-                                  <input type="date" class="form-control" id="exampleFormControlSelect1" value="tgl">
+                                  <input type="date" value="tgl" class="form-control" id="exampleFormControlSelect1">
                               </div>
                           </div>
                           <div class="col-md-3">
                               <div class="form-group">
                                   <label for="exampleFormControlSelect1">Waktu Jemput/Ambil</label>
-                                  <input type="time" class="form-control" id="exampleFormControlSelect1" value="wkt">
+                                  <input type="time" value="wkt" class="form-control" id="exampleFormControlSelect1">
                               </div>
                           </div>
                           <div class="col-md-3">
